crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__cooperative_reduce_op_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 213
expression: variants
---
[
    Sum,
    Max,
    Min,
    Product,
]
