crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__default_stream_behavior_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 128
expression: variants
---
[
    Legacy,
    PerThread,
]
