crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__grid_group_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 225
expression: gg
---
GridGroup {
    block_size: 256,
    num_blocks: 128,
}
