crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__loss_reduction_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 322
expression: variants
---
[
    None,
    Mean,
    Sum,
]
