crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__memory_event_kind_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 96
expression: variants
---
[
    Allocate,
    Deallocate,
]
