crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__multi_stream_config_default_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 170
expression: cfg
---
MultiStreamConfig {
    num_streams: 2,
    sync_barriers: true,
}
