crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__occupancy_limiter_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 90
expression: variants
---
[
    Threads,
    Blocks,
    SharedMemory,
    Registers,
]
