crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__occupancy_result_shared_mem_limited.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 36
expression: result
---
OccupancyResult {
    theoretical: 0.0625,
    active_warps: 4,
    max_warps: 64,
    limiter: SharedMemory,
}
